[package]
name = "toon-vulkano"
version = "0.1.0"
edition = "2021"

[dependencies]
default = "0.1.2"
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
winit = { version = "0.29.3", features = ["rwh_05"] }
rand = "0.8.5"
colored = "2"
cgmath = "0.18.0"
gltf = { version = "1.3.0", features = ["import", "utils"] }

[profile.dev]
opt-level = 1
